# BayeNet

./: .gitignore  CMakeLists.txt  README.md  run.sh
docs/: gtest.md
include/: BayesianNetwork.hpp  Chrono.h  Factor.hpp  Variable.hpp
lib/: CLI11.hpp  prettyprint.hpp
src/: BayesianNetwork.cpp  Factor.cpp  Variable.cpp
test/: test_BayesianNetwork.cpp  test_Variable.cpp  test_main.cpp
